<resources>
    <string name="app_name">小客智慧生活</string>
    <string name="menu_community">Home</string>
    <string name="menu_keydoor">Key</string>
    <string name="menu_intelligenthome">Mine</string>
    <string name="pickerview_cancel">Cancel</string>
    <string name="pickerview_submit">Ensure</string>
    <string name="pickerview_year">Year</string>
    <string name="pickerview_month">Month</string>
    <string name="pickerview_day">Day</string>
    <string name="pickerview_hours">Hour</string>
    <string name="pickerview_minutes">Minute</string>
    <string name="pickerview_seconds">Second</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="decline">Decline</string>
    <string name="add_video_dialog">Your correspondent would like to turn on the video</string>
    <string name="no_current_call">No active call</string>
    <string name="action_settings">Settings</string>
    <string name="call_stats_audio">Audio</string>
    <string name="call_stats_video">Video</string>
    <string name="call_stats_codec">Codec:</string>
    <string name="call_stats_upload">Upload bandwidth:</string>
    <string name="call_stats_download">Download bandwidth:</string>
    <string name="call_stats_ice">ICE connectivity:</string>
    <string name="call_stats_video_resolution">Video size:</string>
    <string name="pref_disable_account">Disable</string>
    <string name="pref_tunnel">Tunnel</string>
    <string name="pref_tunnel_host">Hostname</string>
    <string name="pref_tunnel_port">Port</string>
    <string name="pref_tunnel_mode">Mode</string>
    <string name="call_paused_by_remote">Your correspondent paused the call</string>
    <string name="incoming_call">incoming call</string>
    <string name="content_description_toggle_micro">Toggle micro</string>
    <string name="content_description_toggle_speaker">Toggle speaker</string>
    <string name="content_description_decline">Decline</string>
    <string name="content_description_hang_up">Hang up</string>
    <string name="content_description_accept">Accept</string>
    <string name="content_description_contact_picture">Contact picture</string>
    <string name="content_description_pause">Pause</string>
    <string name="content_description_switch_camera">Switch camera</string>
    <string-array name="tunnel_mode_entries">
        <item>disabled</item>
        <item>3G only</item>
        <item>always</item>
        <item>auto</item>
    </string-array>
    <string-array name="video_preset_entries">
        <item>default</item>
        <item>high-fps</item>
        <item>custom</item>
    </string-array>
    <string name="unread_messages">%i unread messages</string>
    <string name="unknown_incoming_call_name">Unknown</string>
    <string name="notification_started">started</string>
    <string name="status_conf_call">conf</string>
    <string name="status_active_call">active</string>
    <string name="state_paused">paused</string>
    <string name="state_paused_by_remote">paused by remote</string>
    <string name="state_streams_running">state streams running</string>
    <string name="incall_notif_active">Audio call ongoing</string>
    <string name="incall_notif_paused">Paused call ongoing</string>
    <string name="incall_notif_video">Video capturing call ongoing</string>
    <string name="pref_audio_hacks_title">Audio hacks</string>
    <string name="pref_audio_use_specific_mode_title">Use specific mode hack</string>
    <string name="pref_audio_use_specific_mode_summary">0=MODE_NORMAL (default), 2=MODE_IN_CALL</string>
    <string name="pref_audio_hacks_use_routing_api_title">Use routing API hack</string>
    <string name="pref_audio_hacks_use_galaxys_hack_title">Use Galaxy S audio hack</string>
    <string name="pref_audio_soft_volume_title">Use software volume</string>
    <string name="pref_ipv6_title">Use ipv6 instead of ipv4</string>
    <string name="pref_network_title">Network</string>
    <string name="pref_transport">Transport</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="pref_transport_use_random_ports">Use random ports</string>
    <string name="pref_sip_port_title">SIP port to use</string>
    <string name="pref_add_account">Add account</string>
    <string name="pref_delete_account">Delete this account</string>
    <string name="pref_default_account">Use as default</string>
    <string name="pref_echo_canceller_calibration">Echo canceller calibration</string>
    <string name="pref_video_use_front_camera_title">Use front camera</string>
    <string name="pref_video">Video</string>
    <string name="pref_preferences">Preferences</string>
    <string name="pref_video_codecs_title">Codecs</string>
    <string name="pref_preferred_video_size">Preferred video size</string>
    <string name="pref_video_settings_title">Video settings</string>
    <string name="pref_video_automatically_share_my_video_title">Share my camera</string>
    <string name="pref_video_automatically_accept_video_title">Accept incoming video requests</string>
    <string name="pref_video_automatically_share_my_video">Automatically send my camera</string>
    <string name="pref_video_automatically_accept_video">Always accept video requests</string>
    <string name="pref_video_initiate_call_with_video_title">Initiate video calls</string>
    <string name="pref_video_initiate_call_with_video">Always send video requests</string>
    <string name="pref_video_enable_title">Enable Video</string>
    <string name="pref_bandwidth_limit">Bandwidth limit in kbits/s</string>
    <string name="pref_animation_enable_title">Enable Animations</string>
    <string name="pref_escape_plus">Replace + by 00</string>
    <string name="pref_ilbc_summary">iLBC might be unavailable depending on ARM processor and Android OS version.</string>
    <string name="pref_echo_cancellation">Echo cancellation</string>
    <string name="pref_autostart">Start at boot time</string>
    <string name="pref_enable_outbound_proxy">Outbound proxy</string>
    <string name="pref_codecs">Codecs</string>
    <string name="pref_communication_expire_title">Communication timeout</string>
    <string name="pref_incoming_expire_title">Incoming call timeout</string>
    <string name="pref_video_port_title">Video port or port range</string>
    <string name="pref_audio_port_title">Audio port or port range</string>
    <string name="pref_video_port_description">Video port or port range (minport-maxport)</string>
    <string name="pref_audio_port_description">Audio port or port range (minport-maxport)</string>
    <string name="pref_incoming_call_timeout_title">Incoming call timeout (in seconds)</string>
    <string name="pref_adaptive_rate_control">Adaptive rate control</string>
    <string name="pref_adaptive_rate_algorithm">Adaptive rate algorithm</string>
    <string name="pref_codec_bitrate_limit">Codec bitrate limit</string>
    <string-array name="limit_bitrate_entries">
        <item>10 kbits/s</item>
        <item>15 kbits/s</item>
        <item>20 kbits/s</item>
        <item>36 kbits/s</item>
        <item>64 kbits/s</item>
        <item>128 kbits/s</item>
    </string-array>
    <string name="pref_debug">Debug</string>
    <string name="pref_audio">Audio</string>
    <string name="pref_prefix">Prefix</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_proxy">Proxy</string>
    <string name="pref_domain">Domain*</string>
    <string name="pref_passwd">Password*</string>
    <string name="pref_username">Username*</string>
    <string name="pref_sipaccount">SIP Account</string>
    <string name="pref_echo_cancellation_summary">Removes the echo heard by other end</string>
    <string name="pref_stun_server">Stun server</string>
    <string name="pref_ice_enable">Enable ICE</string>
    <string name="pref_ice_enable_summary">A STUN server must be configured to use ICE</string>
    <string name="pref_amr_summary">AMR codec might not be present on your phone</string>
    <string name="pref_media_encryption">Media encryption</string>
    <string name="pref_video_codec_h264_unavailable">Codec disabled, build the app from source code to enable it</string>
    <string name="pref_video_codec_mpeg4_unavailable">Codec disabled, build the app from source code to enable it</string>
    <string name="pref_sipaccounts">SIP Accounts</string>
    <string name="pref_wifi_only">Use wifi only</string>
    <string name="pref_push_notification">Enable push notifications</string>
    <string name="pref_help_proxy">SIP proxy hostname or ip address (optional)</string>
    <string name="pref_help_outbound_proxy">Route all calls through SIP proxy</string>
    <string name="pref_help_username">Example: john if your account is john@sip.example.org</string>
    <string name="pref_help_domain">sip.example.org if your account is john@sip.example.org</string>
    <string name="pref_help_password">You have to re-enter your password if you edit your username and/or the domain</string>
    <string name="pref_linphone_friend_title">Friends</string>
    <string name="pref_image_sharing_server_title">Sharing server</string>
    <string name="pref_remote_provisioning_title">Remote provisioning</string>
    <string name="pref_auto_accept_friends_title">New friends</string>
    <string name="pref_auto_accept_friends_desc">Automatically accept new friend requests</string>
    <string name="pref_primary_account_title">Primary account</string>
    <string name="pref_display_name_title">Display name</string>
    <string name="pref_user_name_title">Username</string>
    <string name="pref_expire_title">Expire</string>
    <string name="pref_avpf">AVPF</string>
    <string name="pref_avpf_rr_interval"> AVPF regular RTCP interval in seconds (between 1 and 5)</string>
    <string name="pref_rfc2833_dtmf">Send RFC2833 DTMFs</string>
    <string name="pref_sipinfo_dtmf">Send SIP INFO DTMFs</string>
    <string name="pref_voice_mail">Voice mail uri</string>
    <string name="pref_background_mode">Background mode</string>
    <string name="pref_auth_userid">Auth userid</string>
    <string name="pref_help_auth_userid">Enter authentication userid (optionnal)</string>
    <string name="pref_display_name">Display name</string>
    <string name="pref_help_display_name">Enter display name (optionnal)</string>
    <string name="pref_upnp_enable">Enable UPNP</string>
    <string name="pref_manage">Manage</string>
    <string name="setup_forced_proxy"></string>
    <string name="enter_account">Please Enter Account</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="register_account">Register Account</string>
    <string name="enter_nickname">Please Enter Nickname</string>
    <string name="forgot_pwd">Forgot?</string>
    <string name="msg_write_pwd">Pealse enter your password</string>
    <string name="msg_ensure_pwd">Please  ensure your password</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="write_email">Please enter email</string>
    <string name="device_list">Device list</string>
    <string name="email">email</string>
    <string name="enter_email">Please enter your email address</string>
    <string name="sex">sex</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="birth_date">birth day</string>
    <string name="enter_birth_date">Please enter yout birthday</string>
    <string name="password">password</string>
    <string name="confirm">confirm</string>
    <string name="nickname">nickname</string>
    <string name="find">Find Device</string>
    <string name="msg">Message</string>
</resources>