<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="@string/pref_sipaccount_key"
        android:title="@string/pref_sipaccount" >
        <EditTextPreference
            android:dialogMessage="@string/pref_help_username"
            android:persistent="true"
            android:title="@string/pref_username" />
        <EditTextPreference
            android:dialogMessage="@string/pref_help_auth_userid"
            android:persistent="true"
            android:title="@string/pref_auth_userid" />
        <EditTextPreference
            android:dialogMessage="@string/pref_help_password"
            android:persistent="true"
            android:title="@string/pref_passwd" />
        <EditTextPreference
            android:dialogMessage="@string/pref_help_domain"
            android:persistent="true"
            android:title="@string/pref_domain" />
        <EditTextPreference
            android:dialogMessage="@string/pref_help_display_name"
            android:persistent="true"
            android:title="@string/pref_display_name" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_advanced_key"
        android:title="@string/pref_advanced" >
        <ListPreference
            android:key="@string/pref_transport_key"
            android:title="@string/pref_transport" />

        <EditTextPreference
            android:persistent="true"
            android:summary="@string/pref_help_proxy"
            android:title="@string/pref_proxy" />

        <CheckBoxPreference
            android:dialogMessage="@string/pref_help_outbound_proxy"
            android:persistent="true"
            android:summary="@string/pref_help_outbound_proxy"
            android:title="@string/pref_enable_outbound_proxy" />

        <EditTextPreference
            android:key="@string/pref_expire_key"
            android:numeric="integer"
            android:title="@string/pref_expire_title" />
        <EditTextPreference
            android:key="@string/pref_prefix_key"
            android:title="@string/pref_prefix" />

        <CheckBoxPreference
            android:key="@string/pref_avpf_key"
            android:title="@string/pref_avpf" />

        <EditTextPreference
            android:key="@string/pref_avpf_rr_interval_key"
            android:numeric="integer"
            android:title="@string/pref_avpf_rr_interval" />

        <CheckBoxPreference
            android:key="@string/pref_escape_plus_key"
            android:title="@string/pref_escape_plus" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_manage_key"
        android:title="@string/pref_manage" >
        <CheckBoxPreference
            android:persistent="true"
            android:title="@string/pref_disable_account" />
        <CheckBoxPreference
            android:persistent="true"
            android:title="@string/pref_default_account" />

        <Preference
            android:persistent="true"
            android:title="@string/pref_delete_account" />
    </PreferenceCategory>

</PreferenceScreen>