<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_act__regist__email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context="com.doormaster.topkeeper.activity.Act_Regist_Email">

    <com.doormaster.topkeeper.view.TitleBar
        android:id="@+id/reg_title_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="6%"
        android:layout_gravity="left|top"
        android:gravity="center"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/tv_account"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="6%"
        android:layout_marginTop="0dp"
        app:layout_marginTopPercent="2%"
        android:layout_below="@id/reg_title_bar"
        android:gravity="left"
        android:maxLines="1"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="5%"
        android:layout_marginRight="0dp"
        app:layout_marginRightPercent="5%"
        android:layout_below="@id/tv_account"
        android:gravity="left"
        android:editable="false"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:hint="@string/enter_email"
        android:background="@null"/>
    <View
        android:id="@+id/view0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="0.2%"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:layout_below="@id/et_username"/>
    <TextView
        android:id="@+id/tv_nick"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="6%"
        android:layout_marginTop="0dp"
        app:layout_marginTopPercent="2%"
        android:layout_below="@id/view0"
        android:gravity="left"
        android:maxLines="1"
        android:textSize="18sp"
        android:text="@string/nickname"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/et_nick"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="5%"
        android:layout_marginRight="0dp"
        app:layout_marginRightPercent="5%"
        android:layout_below="@id/tv_nick"
        android:gravity="left"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:hint="@string/enter_nickname"
        android:background="@null"/>
    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_widthPercent="90%"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:layout_below="@id/et_nick"/>

    <TextView
        android:id="@+id/tv_sex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="6%"
        android:layout_marginTop="0dp"
        app:layout_marginTopPercent="2%"
        android:layout_below="@id/view1"
        android:gravity="left"
        android:maxLines="1"
        android:text="@string/sex"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="5%"
        android:contentDescription="@string/sex"
        android:orientation="horizontal"
        android:layout_below="@id/tv_sex">
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:drawableLeft="@color/green"
            android:shadowColor="@color/gray"
            android:textColor="@color/black"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/female"
            android:shadowColor="@color/gray"
            android:textColor="@color/black"/>
    </RadioGroup>
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_widthPercent="90%"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:layout_below="@id/rg_sex"/>
    <TextView
        android:id="@+id/tv_birth_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="6%"
        android:layout_marginTop="0dp"
        app:layout_marginTopPercent="2%"
        android:layout_below="@id/view2"
        android:gravity="left"
        android:maxLines="1"
        android:text="@string/birth_date"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/et_birthdate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="5%"
        android:layout_marginRight="0dp"
        app:layout_marginRightPercent="5%"
        android:layout_below="@id/tv_birth_date"
        android:gravity="left"
        android:inputType="none"
        android:editable="false"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:hint="@string/enter_birth_date"
        android:background="@null"/>
    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_widthPercent="90%"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:layout_below="@id/et_birthdate"/>
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="6%"
        android:layout_marginTop="0dp"
        app:layout_marginTopPercent="2%"
        android:layout_below="@id/view3"
        android:gravity="left"
        android:maxLines="1"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="5%"
        android:layout_marginRight="0dp"
        app:layout_marginRightPercent="5%"
        android:layout_below="@id/tv_password"
        android:gravity="left"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:hint="@string/msg_write_pwd"
        android:background="@null"/>
    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_widthPercent="90%"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:layout_below="@id/et_password"/>
    <TextView
        android:id="@+id/tv_password2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="6%"
        android:layout_marginTop="0dp"
        app:layout_marginTopPercent="2%"
        android:layout_below="@id/view4"
        android:gravity="left"
        android:maxLines="1"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="5.5%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="5%"
        android:layout_marginRight="0dp"
        app:layout_marginRightPercent="5%"
        android:layout_below="@id/tv_password2"
        android:gravity="left"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:hint="@string/msg_ensure_pwd"
        android:background="@null"/>
    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_widthPercent="90%"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:layout_below="@id/et_password2"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="7%"
        android:layout_marginTop="0dp"
        app:layout_marginTopPercent="3%"
        android:layout_marginLeft="0dp"
        app:layout_marginLeftPercent="5%"
        android:layout_marginRight="0dp"
        app:layout_marginRightPercent="5%"
        android:layout_below="@id/view5"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:background="@drawable/btn_black_normal_shape"/>

</android.support.percent.PercentRelativeLayout>
