<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="46dp"
    android:orientation="vertical" 
   	android:background="@color/main_topbackground">
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" 
        android:background="@color/main_topbackground">
	    <ImageButton
	        android:id="@+id/ib_frag_back_img"
	        android:layout_width="0dp"
	        android:layout_height="45dp"
	        android:layout_weight="0.2"
	        android:background="@color/main_topbackground"
	        android:clickable="true"
	        android:contentDescription="@string/back"
	        android:focusable="true"
	        android:visibility="gone"
	        android:scaleType="centerInside"
	        android:src="@drawable/left_ac" />
	    
	    <LinearLayout 
	        android:id="@+id/ib_frag_msg_layout"
	        android:layout_width="0dp"
	        android:layout_height="45dp"
	        android:visibility="gone"
	        android:layout_weight="0.2"
	        android:orientation="horizontal">
	        <ImageButton
	        	android:id="@+id/ib_frag_msg_img"
	        	android:layout_width="0dp"
	        	android:layout_height="25dp"
	        	android:layout_marginTop="10dp"
	        	android:layout_weight="1"
	        	android:layout_marginStart="8dp"
	        	android:background="@color/main_topbackground"
	        	android:clickable="true"
	        	android:contentDescription="@string/msg"
	        	android:focusable="true"
	        	android:scaleType="centerInside"
	        	android:src="@mipmap/msg_normal" />
	        <ImageView 
	            android:id="@+id/ib_frag_msg_badge"
	            android:layout_width="8dp"
	            android:layout_height="8dp"
	        	android:visibility="gone"
	            android:layout_gravity="center"
	            android:scaleType="fitCenter"
                android:background="@drawable/circularshape" />
	    </LinearLayout>
	    
	    

		<TextView
		    android:id="@+id/ib_frag_title"
		    android:layout_width="0dp"
		    android:layout_height="45dp"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:text="@string/device_list"
		    android:textColor="@color/main_textcolor"
		    android:textSize="18sp"
		    android:textStyle="normal" />
	
	    <ImageButton
	        android:id="@+id/ib_activity_scan_add"
	        android:layout_width="0dp"
	        android:layout_height="45dp"
	        android:layout_weight="0.2"
	        android:visibility="visible"
	        android:background="@color/main_topbackground"
	        android:clickable="true"
	        android:contentDescription="@string/find"
	        android:focusable="true"
	        android:scaleType="centerInside"
	        android:src="@drawable/find_pressed" />
	</LinearLayout>
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="0.01dp"
	    android:background="#353d40" 
	/>
</LinearLayout>

