<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:fitsSystemWindows="true"
    android:background="@color/main_topbackground"
    android:orientation="vertical" >

    <!-- 注册账号头部 begin -->
   	<RelativeLayout
        android:id="@+id/captcha_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/main_background" >
        <ImageView
            android:id="@+id/img_captcha_email_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/left_ac"
            android:onClick="click" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/forgot_pwd"
            android:textColor="@color/main_textcolor"
            android:textSize="16sp" />
    </RelativeLayout>
    <!-- <View
	    android:layout_width="match_parent"
	    android:layout_height="0.01dp"
	    android:background="#A7A7AA"
	/> -->
    <!-- 注册账号头部 end -->
    
    <!-- 注册页面内容 begin -->
   	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        
    
        	<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical"
		    android:orientation="horizontal">

			<RelativeLayout
			    android:layout_width="0dp"
			    android:layout_height="fill_parent"
			    android:layout_weight="2"
			 >
	         
	            <TextView 
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/write_email"
				android:singleLine="true"
				android:textColor="@color/main_textcolor"
				android:textSize="12sp" 
				android:layout_marginTop="12dp"
				android:layout_marginBottom="3dp"
				android:layout_marginLeft="10dp"/>
			<View
			    android:layout_width="match_parent"
			    android:layout_height="0.01dp"
			    android:background="#C8C8C8"
			/>
	            
	        </RelativeLayout>
	  
		
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical"
		    android:orientation="horizontal">

			<RelativeLayout
			    android:layout_width="0dp"
			    android:layout_height="fill_parent"
			    android:layout_weight="2"
			    android:background="@color/main_background">
	         
	            <EditText
	                android:id="@+id/et_captcha_email"
	                android:inputType="text"
	                android:hint="@string/write_email"
	                android:layout_width="match_parent"
                	android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:singleLine="true"
	                android:background="@color/input_background"
	                android:textColorHint="@color/input_hintcolor"
	                android:textColor="@color/input_textcolor"
	                android:textSize="12sp"
	                android:layout_marginLeft="10dp"
	                android:layout_marginRight="10dp"
					android:paddingTop="12dp"
		       		android:paddingBottom="12dp" />
	            
	        </RelativeLayout>
	  
		
		</LinearLayout>

		<View
		    android:layout_width="match_parent"
		    android:layout_height="0.01dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:background="#C8C8C8"
		/>
		<!-- 手机验证码 end -->
		
		<!-- 登录密码 begin -->
	
	    <View
		    android:layout_width="match_parent"
		    android:layout_height="0.01dp"
		    android:background="#C8C8C8"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		/>
	    
	    <!-- 提交按钮 begin -->
  

		<Button
		    android:id="@+id/bt_captcha_email_submit"
		    android:layout_width="match_parent"
		    android:layout_height="38dp"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_marginTop="20dp"
		    android:background="@drawable/shape_btn_blue"
		    android:enabled="true"
		    android:text="@string/submit"
		    android:textColor="@color/button_positive_textcolor"
		    android:textSize="12sp" 
		    android:onClick="click"/>

		<!-- 提交按钮 end -->
		
    </LinearLayout>
</LinearLayout>

